<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:background="@color/background"
    android:orientation="vertical">

    <Button
        android:id="@+id/my_fields"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:text="@string/see_my_fields_data"
        android:onClick="fieldsData"/>

    <Button
        android:id="@+id/create_polygon"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/create_a_field_perimeter"
        android:onClick="createFieldPerimeter"/>

    <Button
        android:id="@+id/weather"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/field_weather_data"
        android:onClick="weatherData"/>

    <Button
        android:id="@+id/NVDI"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/check_plant_status"
        android:onClick="plantStatus"/>

    <Button
        android:id="@+id/soil_data"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/check_soil_data_for_a_field"
        android:onClick="fieldSoilData"/>

    <Button
        android:id="@+id/UVI"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/field_uvi"
        android:onClick="UVI"/>

</LinearLayout>