<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherData"
    android:background="@color/background"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/latitudeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="10dp"
        android:fontStyle="italic"
        android:fontWeight="900"
        android:text="@string/latitude_and_longitude"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/latitudeEdit"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:paddingStart="12dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_map_icon"
        android:drawablePadding="10dp"
        android:hint="@string/latitude_required"
        android:inputType="numberDecimal"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/longitudeEdit"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:paddingStart="12dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_map_icon"
        android:drawablePadding="10dp"
        android:hint="@string/longitude_required"
        android:inputType="numberDecimal"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/log_in"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="Search"
        android:onClick="getWeatherReport"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="50dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:verticalScrollbarPosition="defaultPosition">

            <TextView
                android:id="@+id/main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="10dp"
                android:drawablePadding="10dp"
                android:fontStyle="italic"
                android:fontWeight="900"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"/>


            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="10dp"
                android:drawableStart="@drawable/weather_news"
                android:fontStyle="italic"
                android:fontWeight="900"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/tempreture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="10dp"
                android:drawableStart="@drawable/temperature"
                android:fontStyle="italic"
                android:fontWeight="900"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/tempretureMin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="10dp"
                android:drawableStart="@drawable/hot_weather"
                android:fontStyle="italic"
                android:fontWeight="900"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/tempretureMax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="10dp"
                android:drawableStart="@drawable/temperature_min"
                android:fontStyle="italic"
                android:fontWeight="900"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/feelsLike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="10dp"
                android:drawableStart="@drawable/season"
                android:fontStyle="italic"
                android:fontWeight="900"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/humidity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="10dp"
                android:fontStyle="italic"
                android:fontWeight="900"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                app:drawableStartCompat="@drawable/humidity"/>

            <TextView
                android:id="@+id/pressure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="10dp"
                android:fontStyle="italic"
                android:fontWeight="900"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                app:drawableStartCompat="@drawable/indicator"/>

            <TextView
                android:id="@+id/windSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="10dp"
                android:drawableStart="@drawable/wind"
                android:fontStyle="italic"
                android:fontWeight="900"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>